<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Head title -->
    <string name="lenovoparts_title">Lenovo parts</string>
    <string name="lenovoparts_settings_summary">Device specific customizations</string>

    <!-- Fp gestures -->
    <string name="fp_title">Gestures</string>
    <string name="fp_settings_title">Fingerprint gestures</string>
    <string name="fp_settings_summary">Device specific fingerprint gestures</string>

    <!-- Sound control -->
    <string name="audio_category">Audio</string>
    <string name="dolby_settings_title">Dolby Atmos™</string>
    <string name="dolby_settings_summary">Dive into sound reimagined with Dolby Atmos</string>
    <string name="headphone_gain">Headphone &amp; In-call gain</string>

    <!-- Vibrator -->
    <string name="vibration_category">Vibration</string>
    <string name="vibration_strength_title">Vibration strength</string>

    <!-- Touchscreen -->
    <string name="touchscreen_title">Touchscreen</string>
    <string name="glove_mode_title">High touch sensitivity</string>
    <string name="glove_mode_summary">Increase touchscreen sensitivity so it can be used while wearing gloves</string>

    <!-- Usb fastcharge -->
    <string name="fastcharger_title">Usb</string>
    <string name="fastcharge_title">Usb fast charge</string>
    <string name="fastcharge_summary">Enable fast charge when connected to a computer via usb port</string>
</resources>
